<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.dennis.calculator.MainActivity">


    <EditText
        android:id="@+id/editText"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:background="@android:color/darker_gray"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="36sp"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button1"
            android:textSize="36sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="input1"
            android:text="@string/digit1" />

        <Button
            android:id="@+id/button2"
            android:textSize="36sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="input2"
            android:text="@string/digit2" />

        <Button
            android:id="@+id/button3"
            android:textSize="36sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="input3"
            android:text="@string/digit3" />

        <Button
            android:id="@+id/button_plus"
            android:textSize="36sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="inputPlus"
            android:text="@string/plus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button4"
            android:textSize="36sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="input4"
            android:text="@string/digit4" />

        <Button
            android:id="@+id/button5"
            android:textSize="36sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="input5"
            android:text="@string/digit5" />

        <Button
            android:id="@+id/button6"
            android:textSize="36sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="input6"
            android:text="@string/digit6" />

        <Button
            android:id="@+id/button_minus"
            android:textSize="36sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="inputMinus"
            android:text="@string/minus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button7"
            android:textSize="36sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="input7"
            android:text="@string/digit7" />

        <Button
            android:id="@+id/button8"
            android:textSize="36sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="input8"
            android:text="@string/digit8" />

        <Button
            android:id="@+id/button9"
            android:textSize="36sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="input9"
            android:text="@string/digit9" />

        <Button
            android:id="@+id/button_multiple"
            android:textSize="36sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="inputMultiple"
            android:text="@string/multiple" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button0"
            android:textSize="36sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="input0"
            android:text="@string/digit0" />

        <Button
            android:id="@+id/button_off"
            android:textSize="36sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="inputOff"
            android:text="@string/off" />

        <Button
            android:id="@+id/button_result"
            android:textSize="36sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="inputResult"
            android:text="@string/result" />

        <Button
            android:id="@+id/button_div"
            android:textSize="36sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="inputDiv"
            android:text="@string/div" />

    </LinearLayout>

</LinearLayout>
